--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ license = "MIT"
 winit = "^0.27"
 egui = "^0.19"
 egui-winit = "^0.19"
+pixels = "0.9.0"
+winit_input_helper = "0.13.0"
+lazy_static = "1.4.0"
